--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   },
   "dependencies": {
     "@types/body-parser": "^1.19.0",
+    "csvtojson": "^2.0.10",
     "express": "^4.17.1",
-    "papaparse": "^5.2.0",
     "ts-node": "^8.10.2"
   },
   "devDependencies": {
+    "@types/csvtojson": "^1.1.5",
     "@types/express": "^4.17.6",
     "@types/node": "^14.0.13",
     "babel-cli": "^6.26.0",
