--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "@types/body-parser": "^1.19.0",
     "csvtojson": "^2.0.10",
     "express": "^4.17.1",
+    "mongoose": "^5.9.18",
     "ts-node": "^8.10.2"
   },
   "devDependencies": {
     "@types/csvtojson": "^1.1.5",
     "@types/express": "^4.17.6",
+    "@types/mongoose": "^5.7.24",
     "@types/node": "^14.0.13",
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
     "nodemon": "^2.0.4",
     "tslint": "^6.1.2",
     "typescript": "^3.9.5"
