--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@types/body-parser": "^1.19.0",
     "csvtojson": "^2.0.10",
+    "date-fns": "^2.14.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.18",
     "ts-node": "^8.10.2"
   },
   "devDependencies": {
     "@types/csvtojson": "^1.1.5",
+    "@types/date-fns": "^2.6.0",
     "@types/express": "^4.17.6",
     "@types/mongoose": "^5.7.24",
     "@types/node": "^14.0.13",
